[tool.poetry]
name = "scratched"
version = "0.0.0"
description = "Check which files will be deleted on the 15th, remove the files, and update the list"
authors = ["Peter Van Dyken <pvandyk2@uwo.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=2"

[tool.poetry.scripts]
scratched = { reference = "bin/scratched", type="file" }

[tool.poetry-dynamic-versioning]
enable = true
vcs = 'git'
metadata = true
style = 'semver'
dirty = true
bump = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
